--- a/Local Sites/LocalTravel/assets/src/sass/elements/_button.scss
+++ b/Local Sites/LocalTravel/assets/src/sass/elements/_button.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-//   border: none;
+  //   border: none;
   text-decoration: none;
   height: 50px;
   padding: 10px;
@@ -17,15 +17,17 @@
   span {
     font-size: 20px;
   }
-  svg {
-    // margin-left: 1.4rem;
-  }
+}
+.btn-icon {
+  max-width: 50px;
+  width: 100%;
 }
 
 .btn-with-icon {
-    svg {
-        margin-right: 12px;
-    }
+  display: flex;
+  gap: 12px;
+  max-width: 130px;
+  width: 100%;
 }
 .btn-primary {
   span {
