--- a/Local Sites/LocalTravel/assets/src/sass/helpers/_fonts.scss
+++ b/Local Sites/LocalTravel/assets/src/sass/helpers/_fonts.scss
@@ -1,122 +1,128 @@
 // Thin
 @font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-Thin.ttf') format('truetype');
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
-}
-// Extra Light
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-ExtraLight.ttf') format('truetype');
+  }
+  
+  // Extra Light
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-ExtraLight.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
-}
-// Light
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-Light.ttf') format('truetype');
+  }
+  
+  // Light
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
-}
-// Regular
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-Regular.ttf') format('truetype');
+  }
+  
+  // Regular
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-}
-// Medium
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-Medium.ttf') format('truetype');
+  }
+  
+  // Medium
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
-}
-// Bold
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica-Bold.ttf') format('truetype');
+  }
+  
+  // Bold
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
-}
-// Cursive Light
-@font-face {
-    font-family: 'Geologica';
-    src: url('../fonts/geologica/Geologica_Cursive-Light.ttf') format('truetype');
+  }
+  
+  // Cursive Light (if available)
+  @font-face {
+    font-family: 'Golos';
+    src: url('../fonts/golos/Golos_Cursive-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
-}
-
-*{
-    font-family: $font-family;
-}
-
-html,body {
-    font-family: $font-family;
-    font-size: 1rem;
-    font-weight: 500; 
-}
-
-h1, h2, h3 , h4 , h5 , h6{
-    font-weight: 500; 
+  }
+  
+  * {
+    font-family: "Golos Text", sans-serif;
+  }
+  
+  html, body {
+    font-family: "Golos Text", sans-serif;
+    font-size: 16px; // 1rem = 16px
+    font-weight: 500;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
     color: $text;
-}
-
-p {
-    font-weight: 500; 
+  }
+  
+  p {
+    font-weight: 500;
     color: $text;
-    font-size: 1rem;
-    &:last-child{
-        margin-bottom: 0px;
+    font-size: 16px;
+    &:last-child {
+      margin-bottom: 0px;
     }
-}
-
-a, button{
-    font-weight: 500; 
+  }
+  
+  a, button {
+    font-weight: 500;
     color: $text;
-}
-
-h1 {
-    font-size: 3.5rem; // 56px
-    font-weight: 400; 
-}
-
-h2 {
-    font-size: 2.5rem; // 40px
-    font-weight: 400; 
-}
-
-h3 {
-    font-size: 2.125rem; // 34px
-    font-weight: 400; 
-}
-
-h4 {
-    font-size: 1.875rem; // 30px
-    font-weight: 400; 
-}
-
-h5 {
-    font-size: 1.625rem; // 26px
-    font-weight: 400; 
-}
-
-h6 {
-    font-size: 1.375rem; // 22px
-    font-weight: 400; 
-}
-
-@media (max-width: 768px) {
-    h1{
-        font-size: 3rem;
+  }
+  
+  h1 {
+    font-size: 56px;
+    font-weight: 400;
+  }
+  
+  h2 {
+    font-size: 40px;
+    font-weight: 400;
+  }
+  
+  h3 {
+    font-size: 34px;
+    font-weight: 400;
+  }
+  
+  h4 {
+    font-size: 30px;
+    font-weight: 400;
+  }
+  
+  h5 {
+    font-size: 26px;
+    font-weight: 400;
+  }
+  
+  h6 {
+    font-size: 22px;
+    font-weight: 400;
+  }
+  
+  @media (max-width: 768px) {
+    h1 {
+      font-size: 48px;
     }
-}
-
+  }
+  
