clear all project

--- a/Local Sites/LocalTravel/assets/src/sass/main.scss
+++ b/Local Sites/LocalTravel/assets/src/sass/main.scss
@@ -19,9 +19,9 @@
 @import 'helpers/ui';
 
 //Components
+@import 'components/faq';
 // @import 'components/header';
 // @import 'components/footer';
-// @import 'components/faq';
 
 // @import 'components/hero';
 // @import 'components/why';
