clear the project

--- a/Local Sites/LocalTravel/assets/src/sass/main.scss
+++ b/Local Sites/LocalTravel/assets/src/sass/main.scss
@@ -19,7 +19,7 @@
 @import 'helpers/ui';
 
 //Components
-@import 'components/faq';
+// @import 'components/faq';
 // @import 'components/header';
 // @import 'components/footer';
 
